--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Astronomie - Conférence{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            <h1>Livre d'or</h1>
+            <h2>Vos commentaires</h2>
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
