--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -1,20 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ConferenceController!{% endblock %}
+{% block title %}Livre d'or - Conférence Astronomie{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello</h1>
+    <h2>Les conférences</h2>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/srinathchristophersamarasinghe/PhpstormProjects/conference/conference/src/Controller/ConferenceController.php'|file_link(0) }}">src/Controller/ConferenceController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/srinathchristophersamarasinghe/PhpstormProjects/conference/conference/templates/conference/index.html.twig'|file_link(0) }}">templates/conference/index.html.twig</a></code></li>
-    </ul>
-</div>
+    {% for conference in conferences %}
+        <h4>{{ conference.titre }} - {{ conference.ville }}</h4>
+        <p>
+            <a href="{{ path('conference', {slug: conference.slug}) }}">découvrir</a>
+        </p>
+    {% endfor %}
+
+
 {% endblock %}
