Photo half handled

--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -31,4 +31,7 @@
             <div>Pas de commentaires pour le moment.</div>
     {% endif %}
 
+    <h2>Ajouter votre commentaire</h2>
+    {{ form(commentaire_form) }}
+
 {% endblock %}
