--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,15 @@
 
     </head>
     <body>
+        {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
+        
+            <div class="alert alert-warning" style="margin-bottom: 0;">
+                Vous êtes connecté en tant que cet utilisateur.
+                <a href="{{ path('home', {'_switch_user': '_exit'}) }}">Revenir au profil Admin</a>
+            </div>
+            
+        {% endif %}
+    
         {% block header %}
 
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -42,9 +51,17 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Nos livres</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_login') }}">login</a>
-                        </li>
+                        {% if is_granted('ROLE_USER') %}
+                            <li class="nav-item dropdown">
+                                <a class="nav-link nav-hover-up2" href="{{ path('app_account') }}"> <i class="icon ion-home" style="font-size: large"></i> </i></a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link nav-hover-up2" href="{{ path('app_logout') }}">Déconnexion</i></a>
+                            </li>
+
+                        {% else %}
+                            <li class="nav-item"><a class="nav-link nav-hover-up2" href="{{ path('app_login') }}">Connexion</a></li>
+                        {% endif %}
 
 
                     </ul>
@@ -53,6 +70,20 @@
             </nav>
 
         {% endblock %}
+
+        {% for label, messages in app.flashes %}
+            <div class="container">
+                <div class="alert alert-{{ label }}">
+                    {% for message in messages %}
+                        <p>{{ message | raw }}</p>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endfor %}
+
+        {% if is_granted('ROLE_USER') %}
+            <h6 class="isBlue" style="margin-top: 2em; margin-left: 2em;">Bienvenue {{ app.user.prenom }} {{ app.user.nom }}</h6>
+        {% endif %}
 
         {% block body %}
             <header>
@@ -91,9 +122,17 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Nous contacter</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_login') }}">login</a>
-                            </li>
+                            {% if is_granted('ROLE_USER') %}
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link nav-hover-up2" href="{{ path('app_account') }}"> <i class="icon ion-home" style="font-size: large"></i> </i></a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link nav-hover-up2" href="{{ path('app_logout') }}">Déconnexion</i></a>
+                                </li>
+
+                            {% else %}
+                                <li class="nav-item"><a class="nav-link nav-hover-up2" href="{{ path('app_login') }}">Connexion</a></li>
+                            {% endif %}
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Mentions Légales</a>
                             </li>
