--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,7 +30,7 @@
             >
             <div class="checkbox mb-3">
                 <label>
-                    <input type="checkbox" value="remember-me"> Se souvenir de moi
+                    <input type="checkbox" value="_remember_me"> Se souvenir de moi
                 </label>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">
