--- a/public/css/color-switcher-design.css
+++ b/public/css/color-switcher-design.css
@@ -24,7 +24,7 @@
 }
 
 .color-palate-head {
-    background: #f20487 none repeat scroll 0 0;
+    background: #904a70 none repeat scroll 0 0;
     padding: 15px 0;
     margin-bottom: 30px;
 }
@@ -92,7 +92,7 @@
 }
 
 .palate.default-color {
-    background: #f20487 none repeat scroll 0 0;
+    background: #904a70 none repeat scroll 0 0;
 }
 
 .palate.green-color {
@@ -108,7 +108,7 @@
 }
 
 .palate.purple-color {
-    background: #bb54e1 none repeat scroll 0 0;
+    background: #904a70none repeat scroll 0 0;
 }
 
 .palate.teal-color {
@@ -124,7 +124,7 @@
 }
 
 .color-trigger {
-    background: #f20487 none repeat scroll 0 0;
+    background: #904a70 none repeat scroll 0 0;
     cursor: pointer;
     height: 50px;
     right: -46px;
@@ -158,7 +158,7 @@
     line-height:50px;
     content: "\f00d";
     font-family: "Font Awesome 5 Free";
-    background-color: #f20487;
+    background-color: #904a70;
     z-index: 1;
     opacity: 0;
     visibility: hidden;
@@ -212,7 +212,7 @@
     line-height: 20px;
     padding: 5px 18px;
     text-align: center;
-    background-color: #f20487;
+    background-color: #904a70;
     color: #ffffff;
     cursor: pointer;
     border-radius: 5px;
@@ -253,7 +253,7 @@
 }
 
 .color-palate .purchase-btn:hover{
-    background-color: #f20487;
+    background-color: #904a70;
 }
 
 
