--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,6 +11,10 @@
 
 {% block body %}
 
+    <div class="mx-auto" style="width: 100em; height: 20em;">
+        <hr>
+    </div>
+
         <form class="form-signin" method="post">
             {% if error %}
                 <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
