--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -11,6 +11,10 @@
 
 {% block body %}
 
+    <div class="mx-auto" style="width: 100em; height: 20em;">
+        <hr>
+    </div>
+
     {{ form_start(form) }}
 <div class="m-3">
     <form class="col-md-6">
