--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -79,7 +79,7 @@
                                     </button>
                                 </div>
 
-                                <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
+                                <div class="collapse navbar-collapse clearfix mt-3" id="navbarSupportedContent">
                                     <ul class="navigation clearfix">
                                         <li class="nav-item">
                                             <a class="nav-link" href="{{ path('home') }}">Les conférences</a>
